<resources>
    <string name="app_name">Study Bananas</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UCSD Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_create_account">Create Account</string>
    <string name="create_account_progress">Creating account&#8230;</string>
    <string name="sign_in_progress">Authenticating&#8230;</string>
    <string name="email_suffix">"@ucsd.edu"</string>
    <string name="error_invalid_email">Please enter a UCSD email address</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="logout_button">Logout</string>
    <string name="account_creation_button">"Create Account"</string>
    <string name="edit_name">"Full name"</string>
    <string name="welcome_message">"Welcome! This appears to be your first time logging in. Please
        enter your full name and we'll get you started."</string>
    <string name="add_name_button">"Let's go!"</string>
    <string name="create_account">"<u>No account? Create one here</u>"</string>
    <string name="title_activity_signup">Create an account</string>
    <string name="error_short_password">Password should be at least 6 characters long</string>
    <string name="error_mismatched_passwords">Passwords do not match</string>
    <string name="error_account_exists">An account already exists with this email</string>
    <string name="error_account_no_exist">This email is not associated with any accounts</string>
    <string name="email_verification">Your account has successfully been created! Check your email
        for a verification link. Once you\'ve verified your account, you will be able to log
        in.</string>
    <string name="email_verification_short">Email Verification</string>
    <string name="ok">OK</string>
    <string name="email_verification_failure">Your account has not yet been verified. Please check
        your email for a verification link.</string>
    <string name="password_reset_success">The password reset email was successfully sent! Please
        check your email.</string>
    <string name="password_reset_failure">The password reset email could not be sent. Please ensure
        you are connected to the internet, or try again later.</string>
    <string name="password_reset"><u>Reset your password</u></string>
    <string name="send_email_progress">Sending email&#8230;</string>
    <string name="password_reset_title">Reset Password</string>
    <string name="password_reset_email">Please enter your email address so we can send you a
        password reset email.</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="main_activity_title">Join or Create a Group</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_class">Add a class</string>
    <string name="delete">Remove</string>
    <string name="pick_class">Select a class</string>
    <string name="start_time">"Start Time: "</string>
    <string name="end_time">"End Time: "</string>
    <string name="select">Select</string>
    <string name="max_members">Max Members: </string>
    <string name="location">"LOCATION: "</string>
    <string name="description_hint">"What are you studying? How can other people find you?"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="leave_group">Leave Group</string>
    <string name="disband_group">Disband Group</string>
    <string name="description">Description</string>
    <string name="members">Members</string>
    <string name="max_members_hint"><font size="8">Max Members</font></string>
    <string name="time_separator">" - "</string>
    <string name="kick_member">Kick</string>
    <string name="group_management">Group Management</string>
    <string name="change_leadership">Are you sure you want to transfer leadership to %1$s?</string>
    <string name="sign_out_error">Please leave or disband your group before signing out.</string>
    <string name="title_activity_maps">Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_description">Study Bananas is an open source application, created with the
        intention of bringing people together to study. It is a 10-week project designed and
        implemented by a team of 10 students for the CSE 110 class at UCSD. We hope that it proves
        useful in finding people to study with.</string>
    <string name="about_members"><b>The Team</b>\nDavid Chang - Algorithm Specialist\n
        Christopher Harris - Software Dev. Lead\n
        John Murcko - Sr. System Analyst\n
        Tarun Pasumarthi - 2nd Software Dev. Lead\n
        Harley Saxton - UI Specialist\n
        Ryan Shim - QA Lead\n
        Gokul Suresh - Database Specialist\n
        Andrew Yoo - Business Analyst\n
        William Yu - Software Architect\n
        Julia Li - Project Manager</string>
    <string name="about_version">Version %1$s</string>
    <string name="support">Support</string>
    <string name="support_info">Contact Chris Harris at crh013@ucsd.edu if you have questions or
        would like to provide feedback. Questions and comments are both welcome.</string>
    <string name="no_courses">Add a class to view available groups</string>
    <string name="no_groups">There are no active groups for this course</string>
    <string name="group_length_error">Group study period needs to be under 16 hours</string>
    <string name="error">Error</string>
    <string name="no_course_error">"Please select a course"</string>
    <string name="no_start_time_error">"Please select a start time"</string>
    <string name="no_end_time_error">"Please select an end time"</string>
    <string name="no_location_error">"Please select a location"</string>
    <string name="no_max_members_error">"Please select the maximum group occupancy"</string>
    <string name="select_member_limit">"Set Group Member Limit"</string>
    <string name="gplay_stopped_error">"Google Play Services stopped working"</string>
    <string name="gplay_not_available">"Google Play Services are not available"</string>
    <string name="network_failure_short">"Network Error"</string>
    <string name="network_failure">"Unable to connect to the internet"</string>
    <string name="location_not_found_error">"Location could not be found"</string>
    <string name="network_status">Network Status</string>
    <string name="firebase_disconnect">Disconnected from Firebase, please check your internet
        connection. Reconnecting&#8230;</string>
    <string name="alarm_receiver_filter">alarm_receiver</string>
    <string name="time_warning_filter">time_warning</string>
    <string name="do_extend_filter">do_extend</string>
    <string name="no_extend_filter">no_extend</string>
    <string name="shutdown_filter">shutdown</string>
    <string name="new_leader_notification">You are now the leader of your study group</string>
    <string name="view_group_management_notification">Tap to open group management</string>
    <string name="new_time_notification">Your group\'s end time has been updated to %1$s</string>
    <string name="view_group_notification">Tap to view group</string>
    <string name="new_capacity_notification">Your group\'s member capacity has %1$s to %2$i</string>
    <string name="new_description_notification">Your group\'s description has been updated</string>
    <string name="kicked_notification">You have been kicked from the study group</string>
    <string name="create_join_notification">Tap to join or create a new group</string>
    <string name="group_deleted_notification">Your study group has disbanded</string>
    <string name="member_join_notification">A banana has joined your study bunch</string>
    <string name="member_leave_notification">A banana has left your study bunch</string>
    <string name="expiring_soon_notification">Your group is expiring soon</string>
    <string name="extend_time_prompt">Extend end time by 30 minutes?</string>
    <string name="foreground_notification_title">You are currently in a study group</string>
    <string name="join_group_fragment_tag">join_group</string>
    <string name="group_interaction_fragment_tag">group_interaction</string>
    <string name="google_maps_base_url">"http://maps.google.co.in/maps?q=%1$s %2$s"</string>
    <string name="fetching_courses_title">Courses</string>
    <string name="fetching_courses">Fetching list of courses&#8230;</string>
    <string name="select_end_time">Select end time</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_all">Enable/disable all</string>
    <string name="settings_notifications_join">When member joins group</string>
    <string name="settings_notifications_leave">When member leaves group</string>
    <string name="settings_notifications_info">When group info changes</string>
    <string name="settings_secret_enable">Enable Super Secret Message</string>
    <string name="settings_secret_disable">Disable Super Secret Message</string>
</resources>