<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04" />

    <TextView
        android:text="@string/settings_notifications"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="0.04"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textAllCaps="false" />

    <Switch
        android:text="@string/settings_notifications_all"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch6"
        android:textSize="16sp"
        android:layout_weight="0.07"
        android:theme="@style/SCBSwitch"
        android:checked="true" />

    <Switch
        android:text="@string/settings_notifications_join"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch10"
        android:textSize="16sp"
        android:layout_weight="0.07"
        android:theme="@style/SCBSwitch"
        android:checked="true" />

    <Switch
        android:text="@string/settings_notifications_leave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:id="@+id/switch9"
        android:textSize="16sp"
        android:layout_weight="0.07"
        android:checked="true"
        android:theme="@style/SCBSwitch" />

    <Switch
        android:text="@string/settings_notifications_info"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch8"
        android:textSize="16sp"
        android:layout_weight="0.10"
        android:theme="@style/SCBSwitch"
        android:checked="true" />

    <!-- filler -->
    <TextView
        android:layout_height="0dip"
        android:layout_width="fill_parent"
        android:layout_weight=".6" />

    <Button
        android:id="@+id/secret_button"
        android:text=""
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:textSize="16sp"
        android:background="#00000000"
        android:layout_weight="0" />

    <ToggleButton
        android:id="@+id/secret_toggle_button"
        android:textOff="@string/settings_secret_enable"
        android:textOn="@string/settings_secret_disable"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_marginBottom="10sp"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:checked="false"
        android:background="@drawable/secret_btn_toggle"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:visibility="invisible"
        android:enabled="false"
        android:layout_weight="0" />
</LinearLayout>