<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />

    <TextView
        android:id="@+id/about_version"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/banana_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/about_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about_members" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>