<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:id="@+id/fragment_group_interaction"
    tools:context="com.bananabanditcrew.studybananas.ui.groupinteraction.GroupInteractionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/group_interaction_location"
            android:layout_weight="0.7"
            android:drawableRight="@drawable/ic_place_grey"
            android:drawableEnd="@drawable/ic_place_grey"
            android:textSize="20sp"
            android:textColor="#888888"
            style="@style/Widget.AppCompat.Button.Colored"
            app:backgroundTint="@color/colorPrimary"/>

        <ViewSwitcher
            android:id="@+id/group_interaction_members_switcher"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3">

            <TextView
                android:id="@+id/group_interaction_members"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_people"
                android:drawableEnd="@drawable/ic_people"
                android:textSize="20sp" />

            <EditText
                android:hint="@string/max_members_hint"
                android:inputType="number"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:drawableRight="@drawable/ic_people"
                android:drawableEnd="@drawable/ic_people"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:id="@+id/group_interaction_members_edit"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:textSize="20sp"
                android:background="@drawable/text_frame_white">
            </EditText>

        </ViewSwitcher>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/group_interaction_start_time"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|end"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Time"
            android:textSize="23sp" />

        <TextView
            android:text="@string/time_separator"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Time"
            android:textSize="23sp" />

        <ViewSwitcher
            android:id="@+id/group_interaction_end_time_switcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/group_interaction_end_time"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Time"
                android:textSize="23sp"/>

            <Button
                android:id="@+id/group_interaction_end_time_button"
                android:layout_gravity="center_vertical|start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"/>

        </ViewSwitcher>


    </LinearLayout>

    <TextView
        android:text="@string/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <ViewSwitcher
        android:id="@+id/group_interaction_description_switcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/text_frame_green">

            <TextView
                android:id="@+id/group_interaction_description"
                android:layout_margin="7dp"
                android:minLines="5"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/text_frame_white">

            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:id="@+id/group_interaction_description_edit"
                android:gravity="top|start"
                android:layout_margin="7dp"
                android:minLines="5"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@android:color/transparent"/>
        </FrameLayout>
    </ViewSwitcher>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/leave_group_button"
            android:text="@string/leave_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/group_interaction_member_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_above="@id/leave_group_button">

            <TextView
                android:text="@string/members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/group_interaction_member_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
